<resources>
    <string name="label_pin">Add shortcut to home screen</string>
    <string name="radar_shortcut">Radar</string>
    <string name="spcmesoanalysis_shortcut">SPC Mesoanalysis</string>
    <string name="ncepModels_shortcut">NCEP Models</string>
    <string name="spchref_shortcut">SPC HREF</string>
    <string name="read_aloud">Read Aloud</string>
    <string name="stop_audio">Stop Audio</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_clearall">Clear all</string>
    <string name="app_name">wX</string>
    <string name="action_settings">Settings</string>
    <string name="action_radar">Radar</string>
    <string name="action_alert">US Alerts</string>
    <string name="action_about">About</string>
    <string name="action_cloud">Visible</string>
    <string name="action_forecast">Hourly Forecast</string>
    <string name="action_afd">AFD</string>
    <string name="label_radar_markers">Help - radar markers</string>
    <string name="title_activity_settings_main">Settings</string>
    <string name="title_activity_settings_ui">User Interface Settings</string>
    <string name="title_activity_text_screen">wX</string>
    <string name="about_wx">wX is an efficient and configurable method to access weather content from the NWS,
        Environment Canada, NSSL WRF, and blitzortung.org.
        Additional software and tools are used from Telecine, GraphView,
        bzip2, TouchImageView, OkHttp, ImageMap, HoloColorPicker, and OpenStreetMaps.
        Software is provided \"as is\". Use at your own risk. Use for educational purposes and non-commercial purposes only.
        Do not use for operational purposes.  &#169; 2013&#8211;2022 joshua.tee@gmail.com .
        Privacy Policy: this app does not collect any data from the user or the user’s device.
        Please report bugs or suggestions via email to me as opposed to app store reviews.
        wX is licensed under the GNU GPLv3 license. For more information on the license please go here:
    http://www.gnu.org/licenses/gpl-3.0.en.html</string>
    <string name="title_activity_settings_location_generic">Location Settings</string>
    <string name="title_activity_hourly">Hourly Forecast</string>
    <string name="title_activity_settings_notifications">Notifications</string>
    <string name="title_activity_spctstorm_outlook">Thunderstorm Outlook</string>
    <string name="title_activity_spcswosummary">Convective Outlook Summary</string>
    <string name="label_br">N0Q: Base Reflectivity</string>
    <string name="label_bv">N0U: Base Velocity</string>
    <string name="label_n0b">N0Q: Base Reflectivity super-res</string>
    <string name="label_n0g">N0U: Base Velocity super-res</string>
    <string name="label_srm">N0S: Storm Relative Motion Velocity</string>
    <string name="label_eet">EET: Enhanced Echo Tops</string>
    <string name="label_dvl">DVL: Vertically Integrated Liquid</string>
    <string name="label_dsp">DSP: Digital Storm Total Accumulation</string>
    <string name="label_daa">DAA: Digital Accumulation Array</string>
    <string name="label_h0c">H0C: Hydrometeor Classification</string>
    <string name="label_l2ref">SuperRes Reflectivity</string>
    <string name="label_l2vel">SuperRes Velocity</string>
    <string name="label_tzl">TZL: Long Range Digital Base Reflectivity</string>
    <string name="label_tz0">TZ0: Digital Base Reflectivity</string>
    <string name="label_tv0">TV0: Digital Base Velocity</string>
    <string name="label_dhr">DHR: Digital Hybrid Scan Reflectivity</string>
    <string name="label_n1p">N1P: One Hour Precipitation Total</string>
    <string name="label_ntp">NTP: Storm Total Precipitation</string>
    <string name="label_ncr">NCR: Composite Reflectivity 124nm</string>
    <string name="label_ncz">NCZ: Composite Reflectivity 248nm</string>
    <string name="label_et">ET: Echo Tops</string>
    <string name="label_vil">VIL: Vertically Integrated Liquid</string>
    <string name="label_a3">Animate 3 frames</string>
    <string name="label_a6">Animate 6 frames</string>
    <string name="label_a12">Animate 12 frames</string>
    <string name="label_a18">Animate 18 frames</string>
    <string name="label_a36">Animate 36 frames</string>
    <string name="label_a72">Animate 72 frames</string>
    <string name="label_a144">Animate 144 frames</string>
    <string name="label_a24">Animate 24 frames</string>
    <string name="label_a48">Animate 48 frames</string>
    <string name="label_a60">Animate 60 frames</string>
    <string name="label_a84">Animate 84 frames</string>
    <string name="label_a96">Animate 96 frames</string>
    <string name="label_a">Animate frames</string>
    <string name="label_vis">Visible</string>
    <string name="label_rid_map">Map</string>
    <string name="label_toggle_favorite">Toggle favorite</string>
    <string name="title_activity_uswarnings_with_radar_v3">US Alerts</string>
    <string name="title_activity_spccompmap">Compmap</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="label_t1">Tilt 1</string>
    <string name="label_t2">Tilt 2</string>
    <string name="label_t3">Tilt 3</string>
    <string name="label_t4">Tilt 4</string>
    <string name="label_change_tilt">Change Tilt</string>
    <string name="label_animate">Animate</string>
    <string name="label_pause">Pause</string>
    <string name="label_other">Level 3</string>
    <string name="label_l2">Level 2</string>
    <string name="label_n0x">N0X: Differential Reflectivity</string>
    <string name="label_n0c">N0C: Correlation Coefficient</string>
    <string name="label_n0k">N0K: Specific Differential Phase</string>
    <string name="label_nsw">NSW: Base Spectrum Width</string>
    <string name="label_nvw">NVW: VAD wind profile</string>
    <string name="title_activity_spcfire_outlook">SPC Fire Weather Outlook</string>
    <string name="title_activity_hpcrainfall_forecast">WPC Excessive Rainfall Forecast</string>
    <string name="title_activity_spcsoundings">Sounding</string>
    <string name="title_activity_severe_dashboard">Severe Dashboard</string>
    <string name="title_activity_settings_location_list_view">Locations</string>
    <string name="title_activity_settings_spotternetwork_view">Spotter Network</string>
    <string name="title_activity_settings_spotternetwork_key">Spotter Network Key</string>
    <string name="title_activity_settings_spotternetwork_key_hint">Put your Spotter Network key here</string>
    <string name="title_activity_settings_widgets">Widgets</string>
    <string name="title_activity_canada_alerts">Alerts - Canada</string>
    <string name="title_activity_nhc">NHC</string>
    <string name="title_activity_settings_colors">Colors</string>
    <string name="title_activity_sndadd_fav">Add SND</string>
    <string name="label_playlist">Add to PlayList</string>
    <string name="label_share">Share</string>
    <string name="label_share_and_tools">Share/Drawing Tools</string>
    <string name="label_tdwr_sites">TDWR Sites</string>
    <string name="title_activity_settings_playlist">PlayList</string>
    <string name="back_arrow">Back</string>
    <string name="forward_arrow">Forward</string>
    <string name="animate_icon">Animate</string>
    <string name="uswarn_start_time">Start:&#160;%1$s</string>
    <string name="uswarn_end_time">End:&#160;&#160;&#160;%1$s</string>
    <string name="settings_loc_generic_ca_x">CANADA:%1$s</string>
    <string name="help_menu_item">Help</string>
    <string name="main_screen_ca_disclaimor">Data for Canada forecasts and radar provided by http://weather.gc.ca/canada_e.html. Touch to open external browser to this site.</string>
    <string name="menu_regions">Regions</string>
    <string name="action_radar_site_status_l3">Level 3 Radar Status</string>
    <string name="action_radar_site_status_l2">Level 2 Radar Status</string>
    <string name="notif_add">Add Notification</string>
    <string name="label_all">All</string>
    <string name="label_text">Text</string>
    <string name="label_image">Image</string>
    <string name="label_url">URL</string>
    <string name="label_blank"> </string>
    <string name="label_settings">Settings</string>
    <string name="label_help">Help</string>
    <string name="label_about_scan">About Scan</string>
    <string name="label_radar_jellybean_drawtools">Draw/Distance Tool</string>
    <string name="esrl_hrrr_rap">ESRL HRRR/RAP</string>
    <string name="excessive_rainfall_outlook">Excessive Rainfall Outlook</string>
    <string name="glcfs">GLCFS</string>
    <string name="global_satellite">Global Satellite</string>
    <string name="goes_conus_water_vapor">GOES Conus Water Vapor</string>
    <string name="lightning">Lightning</string>
    <string name="national_images">National Images</string>
    <string name="national_text">National Text</string>
    <string name="ncep_models">NCEP Models</string>
    <string name="nhc">NHC</string>
    <string name="nssl_wrf">NSSL WRF</string>
    <string name="observations">Observations</string>
    <string name="observation_sites">Observation Sites</string>
    <string name="opc">OPC</string>
    <string name="radar_mosaic">Radar Mosaic</string>
    <string name="radar_dual_pane">Radar dual pane</string>
    <string name="radar_quad_pane">Radar quad pane</string>
    <string name="spc_composite_map">SPC Composite Map</string>
    <string name="spc_convective_outlooks">SPC Convective Outlooks</string>
    <string name="spc_convective_day_1">SPC Convective Day 1</string>
    <string name="spc_convective_day_2">SPC Convective Day 2</string>
    <string name="spc_convective_day_3">SPC Convective Day 3</string>
    <string name="spc_convective_day_4_8">SPC Convective Day 4–8</string>
    <string name="spc_fire_weather_outlooks">SPC Fire Weather Outlooks</string>
    <string name="spc_href">SPC HREF</string>
    <string name="spc_hrrr">SPC HRRR</string>
    <string name="spc_mesoanalysis">SPC Mesoanalysis</string>
    <string name="spc_soundings">SPC Soundings</string>
    <string name="spc_sref">SPC SREF</string>
    <string name="spc_storm_reports">SPC Storm Reports</string>
    <string name="spc_thunderstorm_outlooks">SPC Thunderstorm Outlooks</string>
    <string name="spotters">Spotters</string>
    <string name="twitter_states">Twitter states</string>
    <string name="twitter_tornado">Twitter tornado</string>
    <string name="us_alerts">US Alerts</string>
    <string name="wpc_gefs">WPC GEFS</string>
    <string name="aurora">Aurora Forecast</string>
    <string name="atl_tropical_weather_outlook">ATL Tropical Weather Outlook</string>
    <string name="atl_tropical_weather_discussion">ATL Tropical Weather Discussion</string>
    <string name="atl_monthly_tropical_summary">ATL Monthly Tropical Summary</string>
    <string name="epac_tropical_weather_outlook">EPAC Tropical Weather Outlook</string>
    <string name="epac_tropical_weather_discussion">EPAC Tropical Weather Discussion</string>
    <string name="epac_monthly_tropical_summary">EPAC Monthly Tropical Summary</string>
    <string name="cpac_tropical_weather_outlook">CPAC Tropical Weather Outlook</string>
    <string name="sst_images">SST images…</string>
    <string name="epac_daily_analysis">EPAC Daily Analysis</string>
    <string name="atl_daily_analysis">ATL Daily Analysis</string>
    <string name="epac_7_day_analysis">EPAC 7-Day Analysis</string>
    <string name="atl_7_day_analysis">ATL 7-Day Analysis</string>
    <string name="epac_sst_anomaly">EPAC SST Anomaly</string>
    <string name="atl_sst_anomaly">ATL SST Anomaly</string>
    <string name="text_prod_by_state">Text Prod by state</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="nws_office_website">NWS Office website</string>
    <string name="nws_office_hazards_map">NWS Office hazards map</string>
</resources>