<!-- 
    Copyright 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020  joshua.tee@gmail.com

    This file is part of wX.

    wX is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    wX is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with wX.  If not, see <http://www.gnu.org/licenses/>.

 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/label_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_atl_two"
        android:title="@string/atl_tropical_weather_outlook"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_atl_twd"
        android:title="@string/atl_tropical_weather_discussion"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_atl_tws"
        android:title="@string/atl_monthly_tropical_summary"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_epac_two"
        android:title="@string/epac_tropical_weather_outlook"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_epac_twd"
        android:title="@string/epac_tropical_weather_discussion"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_epac_tws"
        android:title="@string/epac_monthly_tropical_summary"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cpac_two"
        android:title="@string/cpac_tropical_weather_outlook"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sst"
        android:title="@string/sst_images"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_epac_daily"
                android:title="@string/epac_daily_analysis"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_atl_daily"
                android:title="@string/atl_daily_analysis"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_epac_7daily"
                android:title="@string/epac_7_day_analysis"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_atl_7daily"
                android:title="@string/atl_7_day_analysis"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_epac_sst_anomaly"
                android:title="@string/epac_sst_anomaly"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_atl_sst_anomaly"
                android:title="@string/atl_sst_anomaly"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
