<!-- 
    Copyright 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020  joshua.tee@gmail.com

    This file is part of wX.

    wX is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    wX is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with wX.  If not, see <http://www.gnu.org/licenses/>.

 -->

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_public_24dp"
        android:title="@string/label_rid_map"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_read_aloud"
        android:icon="@drawable/ic_play_arrow_24dp"
        android:title="@string/read_aloud"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_stop"
        android:icon="@drawable/ic_stop_24dp"
        android:title="@string/stop_audio"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_fav"
        android:icon="@drawable/ic_star_outline_24dp"
        android:title="@string/label_toggle_favorite"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/label_share"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_playlist"
        android:title="@string/label_playlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_notif_text_prod"
        android:title="@string/notif_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pin"
        android:title="@string/label_pin"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_prod_by_state"
        android:title="@string/text_prod_by_state"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_back"
        android:title="@string/back"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_forward"
        android:title="@string/forward"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_website"
        android:title="@string/nws_office_website"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_hazards"
        android:title="@string/nws_office_hazards_map"
        app:showAsAction="never" />
</menu>
